# bike-analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Documentation.md  README.md  data_model.md  docker-compose.yml  pyproject.toml
dbt_project/: .user.yml  dbt-bouncer.yml  dbt_project.yml  profiles.yml
dbt_project/analyses/: a1_overlapping_contract_dates.sql  a2_fct_bike_usage__customer.sql  a3_fct_contract__customer.sql
dbt_project/macros/schema_name/: generate_schema_name.sql
dbt_project/macros/utils/: _macro_parse_date.yml  parse_date.sql
dbt_project/models/dimensions/: _dimensions__models.yml  dim__bike.sql  dim__calendar.sql  dim__contract.sql  dim__customer.sql
dbt_project/models/facts/: _facts__models.yml  fct__bike_usage.sql  fct__contracts.sql
dbt_project/models/marts/: _marts__models.yml  mrt__active_contracts.sql  mrt__avg_monthly_km_by_bike.sql  mrt__top_3_cities_by_km.sql
dbt_project/models/staging/: _sources.yml
dbt_project/models/staging/bike_usage/: _bike_usage__models.yml  stg__bike_usage.sql
dbt_project/models/staging/contracts/: _contracts__models.yml  stg__contracts.sql
dbt_project/models/staging/customers/: _customers__models.yml  stg__customers.sql
docker/init/: 01_init.sql
src/jobrad/: __init__.py
