[project]
name = "jobrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel-Lars", email = "daniel2wendel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "pre-commit>=4.5.1",
]

[project.scripts]
jobrad = "jobrad:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
